nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-nginx-web
  name: my-nginx-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-nginx-web
  template:
    metadata:
      labels:
        app: my-nginx-web
    spec:
      containers:
      - image: garvitn03/newweb
        name: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: my-nginx-web
  ports:
    - port: 80
      targetPort: 80
